[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = {workspace = true, default-features = false}
tracing-subscriber = {workspace = true, default-features = false}
anyhow = {workspace = true, default-features = false}
yansi = {workspace = true, default-features = false}
strum = {workspace = true, default-features = false}
strum_macros = {workspace = true, default-features = false}
